# capnpc-parquet

./: CMakeLists.txt  README.md  capnpgeneric.h  capnpparquet.cpp  capnpparquet.h
cmake_modules/: CapnProtoConfig.cmake  CapnProtoConfigVersion.cmake  CapnProtoTargets-noconfig.cmake  CapnProtoTargets.cmake
examples/: NDHUB_Airports.capnp  airlines.capnp  arraytype_standard_mode.capnp  celebrities.capnp  countries.capnp  map_demo_obscure.capnp  maptype_standard_mode.capnp  spark_1_4_x_arraytype_2_level_list.capnp  spark_1_4_x_arraytype_3_level_list.capnp  spark_1_4_x_maptype_3_level_group.capnp
examples/BDG/: AlignmentRecord.capnp  Alphabet.capnp  Contig.capnp  Dbxref.capnp  Feature.capnp  Fragment.capnp  Genotype.capnp  GenotypeAllele.capnp  GenotypeType.capnp  NucleotideContigFragment.capnp  OntologyTerm.capnp  Parquet.capnp  ProcessingStep.capnp  QualityScoreVariant.capnp  Read.capnp  RecordGroup.capnp  Sample.capnp  Sequence.capnp  Slice.capnp  Strand.capnp  TODO.txt  TranscriptEffect.capnp  Variant.capnp  VariantAnnotation.capnp  VariantAnnotationMessage.capnp  VariantCallingAnnotations.capnp
